# the-secret-pond-sound-system

./: .gitignore  AGENTS.md  Dockerfile.public-recorder  README.md  Start Secret Pond.bat  Start Secret Pond.command  package-lock.json  package.json  playwright.config.js  pyproject.toml  render.yaml  비밀의_연못_녹음_루프_자동화_개발요청서.txt
docs/: audio-setup-checklist.md  operator-guide.md  operator-public-recorder.md
docs/design/: lazyweb-ui-notes.md
docs/ouroboros/: seed_58148696dd2f_amended.yaml  seed_82ef7cb07389.yaml  seed_99096d06bd37_amended.yaml  seed_c6a4fc987d12_amended.yaml  seed_cfad41388f29.yaml  seed_secret_pond_graph_eq_completion_20260612.yaml  seed_secret_pond_graph_eq_dsssp_react_island_20260613.yaml  seed_secret_pond_graph_eq_live_stable_20260612.yaml  seed_secret_pond_graph_eq_weq8c_inline_20260612.yaml
scripts/: check_graph_eq_bundle_fresh.mjs  launch_secret_pond.py
src/secret_pond/: __init__.py  app.py  cli.py  config.py  paths.py  public_app.py  state.py
tests/: conftest.py  test_cli.py  test_config.py  test_docs.py  test_launchers.py  test_main_integration_evidence.py  test_paths.py  test_public_recorder_deployment.py
tests/audio/: test_buffers.py  test_device_readiness.py  test_devices.py  test_effects.py  test_file_io.py  test_graph_eq.py  test_layered_loop_player.py  test_level_analysis.py  test_output.py  test_player_mixer.py  test_recorder.py  test_renderer.py  test_source_library.py  test_voice_stack.py  test_voice_stack_naming.py
tests/services/: test_controller.py  test_device_inventory.py  test_device_switcher.py  test_diagnostics.py  (+22 more)
(+89 files in other folders)
